--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -5,3 +5,15 @@ $white: #ffffff;
 $black: black;
 $gray: #979797;
 $title-color: #342f45;
+
+//!поменять размер
+$tablet: 959px;
+
+// body {
+// 	font-family: 'Roboto', sans-serif;
+// 	font-weight: 400;
+// 	font-style: normal;
+// 	background-color: $main-color;
+// 	color: $black;
+// 	font-size: 14px;
+// }
