--- a/src/components/MortgageDesign/header/Header.module.scss
+++ b/src/components/MortgageDesign/header/Header.module.scss
@@ -10,9 +10,10 @@
 	gap: 24px;
 }
 .imageContainer {
+}
+.videoWrapper {
 	position: relative;
 }
-
 .videoContent {
 	position: absolute;
 	right: 208px;
@@ -44,9 +45,6 @@
 	justify-content: space-between;
 	width: 703px;
 	padding: 37px 0 0 0;
-}
-
-.logo {
 }
 
 .description {
