--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -6,8 +6,9 @@ $black: black;
 $gray: #979797;
 $title-color: #342f45;
 
-//!поменять размер
-$tablet: 959px;
+$netbook: 1230px;
+$tablet: 1000px;
+$mobile: 765px;
 
 // body {
 // 	font-family: 'Roboto', sans-serif;
