--- a/src/components/MortgageDesign/header/Header.module.scss
+++ b/src/components/MortgageDesign/header/Header.module.scss
@@ -6,8 +6,13 @@
 .headerWrapper {
 	position: relative;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	gap: 24px;
+
+	@include mediaTablet {
+		flex-direction: column;
+		align-items: center;
+	}
 }
 .imageContainer {
 }
@@ -16,13 +21,17 @@
 }
 .videoContent {
 	position: absolute;
-	right: 208px;
+	left: 0;
 	bottom: 29px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	gap: 32px;
-	padding-left: 24px;
+	padding-left: 92px;
+
+	@include mediaNetbook {
+		padding-left: 40px;
+	}
 }
 .videoTitle {
 	font-size: 18px;
@@ -54,38 +63,20 @@
 	justify-content: center;
 	gap: 26.4px;
 }
+
 .mainTitle {
 	color: $title-color;
 	font-weight: 700;
 	font-size: 48px;
 	line-height: 125%;
+
+	@include mediaNetbook {
+		font-size: 40px;
+	}
 }
 .highlight {
 	color: $accent;
 }
 
 .subtitle {
-}
-.ctaGroup {
-	position: relative;
-	display: flex;
-	justify-content: flex-start;
-	padding: 33px 0 48px 0;
-	gap: 42px;
-
-	::after {
-		content: '';
-		position: absolute;
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 1px;
-		background-color: $gray;
-		opacity: 0.2;
-	}
-}
-.ctaHeading {
-	color: $black;
-	font-size: 18px;
-	font-weight: 700;
 }
