--- a/src/components/buttons/Buttons.module.scss
+++ b/src/components/buttons/Buttons.module.scss
@@ -1,4 +1,5 @@
 @import './../../style/variables.scss';
+@import './../../style/style.scss';
 
 @mixin ctaButtonStyle {
 	border-radius: 4px;
@@ -67,9 +68,32 @@
 
 // cta buttons
 .ctaButtons {
+	position: relative;
 	display: flex;
+	justify-content: flex-start;
 	align-items: center;
-	gap: 24px;
+	column-gap: 24px;
+	width: 100%;
+	height: 155px;
+
+	::after {
+		content: '';
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 1px;
+		background-color: $gray;
+		opacity: 0.2;
+	}
+
+	@include mediaNetbook {
+		flex-basis: auto;
+		height: 110px;
+		padding-top: 10px;
+		padding-bottom: 10px;
+		flex-wrap: wrap;
+	}
 }
 
 .ctaPrimaryButton {
@@ -106,5 +130,24 @@
 
 	&:hover {
 		border: 1.8px solid rgba($title-color, 0.7);
+	}
+}
+
+.ctaHeading {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+
+	// margin-bottom: 16px;
+	color: $black;
+	font-size: 18px;
+	font-weight: 700;
+	width: 184px;
+
+	@include mediaNetbook {
+		width: 100%;
+		flex-basis: 75%;
+		margin-bottom: 0;
+		font-size: 14px;
 	}
 }
