--- a/src/components/buttons/Buttons.module.scss
+++ b/src/components/buttons/Buttons.module.scss
@@ -73,26 +73,13 @@
 	justify-content: flex-start;
 	align-items: center;
 	column-gap: 24px;
-	width: 100%;
-	height: 155px;
+	// width: 100%;
 
-	::after {
-		content: '';
-		position: absolute;
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 1px;
-		background-color: $gray;
-		opacity: 0.2;
-	}
-
-	@include mediaNetbook {
-		flex-basis: auto;
-		height: 110px;
-		padding-top: 10px;
-		padding-bottom: 10px;
+	@media screen and (max-width: 450px) {
+		justify-content: center;
 		flex-wrap: wrap;
+		gap: 10px;
+		padding: 10px 0;
 	}
 }
 
@@ -131,23 +118,8 @@
 	&:hover {
 		border: 1.8px solid rgba($title-color, 0.7);
 	}
-}
 
-.ctaHeading {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-
-	// margin-bottom: 16px;
-	color: $black;
-	font-size: 18px;
-	font-weight: 700;
-	width: 184px;
-
-	@include mediaNetbook {
-		width: 100%;
-		flex-basis: 75%;
-		margin-bottom: 0;
-		font-size: 14px;
+	@media screen and (max-width: 450px) {
+		width: 200px;
 	}
 }
