--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -16,5 +16,5 @@ $mobile: 810px;
 // 	font-style: normal;
 // 	background-color: $main-color;
 // 	color: $black;
-// 	font-size: 14px;
+// 	font-size:1832 14px;
 // }
