--- a/src/components/MortgageDesign/header/Header.module.scss
+++ b/src/components/MortgageDesign/header/Header.module.scss
@@ -9,6 +9,7 @@
 	justify-content: space-between;
 	gap: 48px;
 	height: 100%;
+	margin-bottom: 104.4px;
 
 	@include mediaNetbook {
 		gap: 24px;
@@ -141,6 +142,7 @@
 	}
 
 	@include mediaMobile {
+		padding-top: 40px;
 		justify-content: center;
 	}
 }
