--- a/src/components/buttons/MenuButton.module.scss
+++ b/src/components/buttons/MenuButton.module.scss
@@ -92,6 +92,17 @@
 	display: flex;
 	justify-content: start;
 	align-items: center;
+
+	@include mediaNetbook {
+		left: 35px;
+	}
+}
+
+.menuHeader.menuHeaderActive {
+	position: fixed;
+	z-index: 10;
+	top: 24px;
+	left: 48px;
 }
 
 .navBtn {
