--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -10,6 +10,8 @@ $netbook: 1230px;
 $tablet: 1000px;
 $mobile: 810px;
 
+$memberBlock-width: 512px;
+
 // body {
 // 	font-family: 'Roboto', sans-serif;
 // 	font-weight: 400;
