--- a/src/components/buttons/MenuButton.module.scss
+++ b/src/components/buttons/MenuButton.module.scss
@@ -2,90 +2,6 @@
 @import '././../../style/style';
 
 .headerMenu {
-	display: none;
-	position: absolute;
-
-	left: 0px;
-	top: 0px;
-	width: 100%;
-	height: 100%;
-}
-.headerMenu.headerMenuActive {
-	display: block;
-	z-index: 9;
-}
-.headerMenuActive::before {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-color: rgba(135, 135, 135, 0.6);
-	z-index: -1;
-}
-.contentWrapper {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	background-color: $white;
-	padding: 0 100px;
-
-	opacity: 1;
-	width: 100%;
-	height: 100%;
-
-	@include mediaNetbook {
-		padding: 0 25px;
-	}
-
-	@include mediaTablet {
-		position: fixed;
-		z-index: 9;
-		left: 0px;
-		top: 0px;
-		width: 100%;
-		height: 100%;
-		justify-content: flex-start;
-		align-items: center;
-	}
-}
-.nav {
-	display: block;
-	padding: 138px 0 0 0;
-	z-index: 10;
-
-	@include mediaNetbook {
-		padding: 120px 0 0 0;
-	}
-}
-
-.navList {
-	display: flex;
-	flex-direction: column;
-	row-gap: 36px;
-	background-color: $white;
-	padding-bottom: 15px;
-
-	a {
-		color: $title-color;
-		font-weight: 700;
-		font-size: 22px;
-		line-height: 127%;
-	}
-
-	@include mediaNetbook {
-		padding-left: 27px;
-		row-gap: 20px;
-	}
-}
-
-.ctaButtonsContainer {
-	padding: 10px 0;
-	height: 21.53%;
-}
-
-.menuHeader {
 	position: absolute;
 	top: 24px;
 	left: 48px;
@@ -98,8 +14,7 @@
 	}
 }
 
-.menuHeader.menuHeaderActive {
-	position: fixed;
+.headerMenu.headerMenuActive {
 	z-index: 10;
 	top: 24px;
 	left: 48px;
@@ -175,4 +90,88 @@
 }
 .logoActive {
 	display: block;
+}
+
+.menu {
+	display: none;
+	position: absolute;
+
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+}
+.menu.menuActive {
+	display: block;
+	z-index: 9;
+}
+.menuActive::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(135, 135, 135, 0.6);
+	z-index: -1;
+}
+.contentWrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	background-color: $white;
+	padding: 0 100px;
+
+	opacity: 1;
+	width: 100%;
+	height: 100%;
+
+	@include mediaNetbook {
+		padding: 0 25px;
+	}
+
+	@include mediaTablet {
+		position: fixed;
+		z-index: 9;
+		left: 0px;
+		top: 0px;
+		width: 100%;
+		height: 100%;
+		justify-content: flex-start;
+		align-items: center;
+	}
+}
+.nav {
+	display: block;
+	padding: 138px 0 0 0;
+	z-index: 10;
+
+	@include mediaNetbook {
+		padding: 120px 0 0 0;
+	}
+}
+
+.navList {
+	display: flex;
+	flex-direction: column;
+	row-gap: 36px;
+	background-color: $white;
+	padding-bottom: 15px;
+
+	a {
+		color: $title-color;
+		font-weight: 700;
+		font-size: 22px;
+		line-height: 127%;
+	}
+
+	@include mediaNetbook {
+		padding-left: 27px;
+		row-gap: 20px;
+	}
+}
+
+.ctaButtonsContainer {
+	padding: 10px 0;
+	height: 21.53%;
 }
