--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -27,9 +27,9 @@ p {
 	margin: 0 auto;
 	padding: 0 15px;
 	max-width: 1270px;
+	// background-color: red;
 
 	&--wide {
-		width: 100%;
 		max-width: 1440px;
 
 		@media screen and (max-width: 1270px) {
